# colmi_r02_client

./: .gitignore  LICENSE  MYSTERIES.md  README.md  check.sh  find_colmi_ring_and_begin_log.py  pyproject.toml
colmi_r02_client/: __init__.py  battery.py  blink_twice.py  cli.py  client.py  date_utils.py  db.py  heart_rate.py  hr.py  hr_settings.py  main.py  packet.py  pretty_print.py  raw.py  real_time.py  real_time_heart_rate.py  real_time_hr.py  reboot.py  set_time.py  steps.py
colmi_r02_client/real_time/: __init__.py  enum.py  packet.py
docs/: colmi_r02_client.html  index.html  search.js
docs/colmi_r02_client/: battery.html  blink_twice.html  cli.html  client.html  date_utils.html  db.html  heart_rate.html  heart_rate_log_settings.html  hr.html  hr_settings.html  main.html  packet.html  pretty_print.html  real_time.html  real_time_heart_rate.html  real_time_hr.html  reboot.html  set_time.html  steps.html
tests/: database_schema.sql  test_battery.py  test_cli.py  test_client.py  test_date_utils.py  test_db.py  test_heart_rate.py  test_heart_rate_details.py  test_heart_rate_log_settings.py  test_hr.py  test_hr_settings.py  test_main.py  test_packet.py  test_pretty_print.py  test_real_time.py  test_real_time_hr.py  test_set_time.py  test_steps.py
