[tool.poetry]
name = "colmi-r02-client"
version = "0.1.0"
description = "Connect to Colmi R02 smart ring over BLE"
authors = ["Wesley Ellis <tahnok@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
bleak = "^0.22.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
